syntax = "proto3";
package admin;

option go_package = "admin/v1;admin";

import "validate/validate.proto";

message AccessToken{
  // Token 类型
  string type = 1;
  // token
  string access_token = 2;
  // 过期时间
  int32 expires_in = 3;
}

// 管理员登录接口请求参数
message AuthLoginRequest{
  // 登录账号
  string username = 1 [(validate.rules).string.min_len = 1];
  // 登录密码
  string password = 2 [(validate.rules).string.min_len = 1];
  // 图形验证码
  string captcha = 3 [(validate.rules).string.min_len = 1];
  // 图形验证码
  string captcha_voucher = 4 [(validate.rules).string.min_len = 1];
}

// 管理员登录接口请求参数
message AuthLoginResponse{
  string username = 2;
  AccessToken auth = 1;
}


// 图形验证接口请求参数
message AuthCaptchaRequest{}

// 图形验证接口响应参数
message AuthCaptchaResponse{
  // 验证码唯一凭证
  string voucher = 1;
  // 验证码图像 base64
  string captcha = 2;
}


// 管理员注销登录接口请求参数
message AuthLogoutRequest{}

// 管理员注销登录接口请求参数
message AuthLogoutResponse{}

// 管理员刷新Token接口请求参数
message AuthRefreshRequest{}

// 管理员刷新Token接口请求参数
message AuthRefreshResponse{
  // 授权 token
  string token = 1;
  // 过期时间 单位秒
  int32 expire_in = 2;
}


// 管理员刷新Token接口请求参数
message AuthDetailRequest{}

// 管理员刷新Token接口请求参数
message AuthDetailResponse{
  string username = 1;
  string email = 2;
  string mobile = 3;
  string address = 4;
  string two_factor_enable = 5;
}


// 管理员刷新Token接口请求参数
message AuthUpdatePasswordRequest{
  string old_password = 1 [(validate.rules).string.min_len = 6];
  string new_password = 2 [(validate.rules).string.min_len = 6];
}

// 管理员刷新Token接口请求参数
message AuthUpdatePasswordResponse{
  string username = 1;
  string email = 2;
  string mobile = 3;
}



message AuthUpdateDetailRequest{
  string username = 1;
  string mobile = 3;
  string address = 4;
}

message AuthUpdateDetailResponse{

}